# araumi

./: README.md  pyproject.toml
.github/workflows/: ci.yml
araumi/: __init__.py
araumi/datasets/: __init__.py  mog.py
datasets/: mog.py  swissroll.py
tests/: test_datasets.py
