[project]
name = "araumi"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.2",
  "numpy",
  "matplotlib",
  "tqdm",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["araumi", "araumi.*"]